docs/styles/style.css
.agent-assistant {
    flex: 1;
}

.agent-assistant .container {
    position: fixed;
    top: 48;
    width: 100%;
    height: 100%;
}

#agent-assist {
    width: 100%;
    height: 350px;
}

hr {
    padding: 0px !important;
    margin: 0px !important;
}

a{
    color: #23395D;
}

a:hover{
    text-decoration: underline;
}

.chat-message {
    background-color: #F2F2F2;
    border-radius: 5px;
    box-shadow: 0 0 6px #B2B2B2;
    display: inline-block;
    padding: 10px 18px;
    position: relative;
    vertical-align: top;
    width: 55%;
}

.chat-message::before {
    background-color: #F2F2F2;
    content: "\00a0";
    display: block;
    height: 16px;
    position: absolute;
    top: 11px;
    transform:             rotate( 29deg ) skew( -35deg );
        -moz-transform:    rotate( 29deg ) skew( -35deg );
        -ms-transform:     rotate( 29deg ) skew( -35deg );
        -o-transform:      rotate( 29deg ) skew( -35deg );
        -webkit-transform: rotate( 29deg ) skew( -35deg );
    width:  20px;
}

.customer {
    background-color: white;
    color: #23395D;
    float: left;   
    margin: 5px 45px 5px 20px;   
}

.customer::before {
    background-color: white;
    box-shadow: -2px 2px 2px 0 rgba( 178, 178, 178, .4 );
    left: -9px;
}

.agent {
    background-color:  #23395D;
    color: white;
    float: right;    
    margin: 5px 20px 5px 45px;   
}

.agent::before {
    background-color:  #23395D;
    box-shadow: 2px -2px 2px 0 rgba( 178, 178, 178, .4 );
    right: -9px;   
}

.chat-conversation {
    display: flex;
    flex: 1 1 100%;
    flex-direction: column;
}

.message-pane {
    /* display: flex; */
    align-content: stretch;
    flex-direction: column;
    height: calc(100% - 100px);
    background-color: #fff;
    overflow-y: auto;
    flex: 1 1 0;
}

.chat-box {
    padding: 0px 20px 0px 20px;
    border-top: 1px solid #ccc;
    background-color: rgb(244, 244, 244);
}

.top-chat-box {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 11px;
    height: 20px;
    min-height: 20px;
    max-height: 20px;
    padding-top: 2px;
    color: #999999;
}

.bottom-chat-box {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    font-size: 11px;
    height: 20px;
    min-height: 20px;
    max-height: 20px;
    padding-top: 2px;
    color: #999999;
}

.chat-text {
    width: 100%;
    max-height: 130px;
    padding: 5px;
    overflow-y: auto;
    resize: none;
    color: #666666;
}

.link-container {
    margin: 10px;
}

.canned-response-container {
    margin: 10px;
}

.libraries-container {
    margin: 10px;
}

.content {
    padding-left: 10px;
}

